// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile 1`] = `
<div
  className="mfui-beta-benefits-icons-tile mfui-beta-benefits-icons-tile_icon-position_left-side"
>
  <div
    className="mfui-beta-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-beta-benefits-icons-tile__content-wrapper"
  >
    <Header
      as="h5"
      className="mfui-beta-benefits-icons-tile__title"
      color="black"
      hAlign="inherit"
    >
      title
    </Header>
    <Paragraph
      className="mfui-beta-benefits-icons-tile__text"
      hasMargin={false}
    >
      text
    </Paragraph>
  </div>
</div>
`;

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile without text 1`] = `
<div
  className="mfui-beta-benefits-icons-tile mfui-beta-benefits-icons-tile_icon-position_left-side"
>
  <div
    className="mfui-beta-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-beta-benefits-icons-tile__content-wrapper"
  >
    <Header
      as="h5"
      className="mfui-beta-benefits-icons-tile__title"
      color="black"
      hAlign="inherit"
    >
      title
    </Header>
  </div>
</div>
`;

exports[`<BenefitsIconsTile /> renders BenefitsIconsTile without title 1`] = `
<div
  className="mfui-beta-benefits-icons-tile mfui-beta-benefits-icons-tile_icon-position_left-side"
>
  <div
    className="mfui-beta-benefits-icons-tile__svg-icon"
  >
    <test-file-stub />
  </div>
  <div
    className="mfui-beta-benefits-icons-tile__content-wrapper"
  >
    <Paragraph
      className="mfui-beta-benefits-icons-tile__text"
      hasMargin={false}
    >
      text
    </Paragraph>
  </div>
</div>
`;
